[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Rest/button-main_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/Background/main_page2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/settings_page.gd" type="Script" id=3]
[ext_resource path="res://Audio/Effects/click.mp3" type="AudioStream" id=4]
[ext_resource path="res://Fonts/test_options_ClearSans-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
use_filter = true
font_data = ExtResource( 5 )

[node name="settings_page" type="Node2D"]
script = ExtResource( 3 )

[node name="backgound" type="Sprite" parent="."]
position = Vector2( 320, 180 )
scale = Vector2( 0.914, 0.914 )
texture = ExtResource( 2 )

[node name="back_to_main_menu" parent="." instance=ExtResource( 1 )]
light_mask = 2
margin_left = 25.0
margin_top = 20.0
margin_right = 101.0
margin_bottom = 45.0
text = "НАЗАД"

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="Sound" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 64.0
margin_right = 256.0
margin_bottom = 97.0
custom_fonts/normal_font = SubResource( 1 )
text = "Загальна гучність"
scroll_active = false

[node name="Sound_scroll" type="Node2D" parent="."]

[node name="Max" type="ColorRect" parent="Sound_scroll"]
margin_left = 16.0
margin_top = 112.0
margin_right = 512.0
margin_bottom = 120.0
mouse_default_cursor_shape = 2
color = Color( 0.501961, 0.501961, 0.501961, 1 )

[node name="Actual" type="ColorRect" parent="Sound_scroll"]
margin_left = 16.0
margin_top = 112.0
margin_right = 448.0
margin_bottom = 120.0
mouse_default_cursor_shape = 2
color = Color( 0.745098, 0.745098, 0.745098, 1 )

[node name="Area2D" type="ColorRect" parent="Sound_scroll"]
margin_left = 16.0
margin_top = 112.0
margin_right = 512.0
margin_bottom = 120.0
mouse_default_cursor_shape = 2
color = Color( 1, 1, 1, 0 )

[node name="Sound_value" type="Label" parent="."]
margin_left = 528.0
margin_top = 104.0
margin_right = 624.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 2 )
text = "100%"
align = 1
valign = 1

[connection signal="pressed" from="back_to_main_menu" to="." method="_on_back_to_main_menu_pressed"]
[connection signal="mouse_entered" from="Sound_scroll/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sound_scroll/Area2D" to="." method="_on_Area2D_mouse_exited"]
